Fix second area for dark mode text

--- a/assets/stylesheets/_global.scss
+++ b/assets/stylesheets/_global.scss
@@ -93,7 +93,7 @@ body.dark-mode {
 
   /* Homepage text */
   #hero h2 {
-    color: $text-kinda-muted-color;
+    color: #dcdcdc;
   }
 
   #footer {
